# DevPane

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
data/: io.github.nfantunes.DevPane.desktop  io.github.nfantunes.DevPane.metainfo.xml
data/gschemas/: io.github.nfantunes.DevPane.gschema.xml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GUI.md  HOTKEY-SETUP.md  IDEAS.md  IPC.md  LIMITATIONS.md  OVERVIEW.md  PLAN.md  STORAGE.md
packaging/arch/: .SRCINFO.note  PKGBUILD
packaging/flatpak/: io.github.nfantunes.DevPane.yml
packaging/systemd/: devpane.service
scripts/: dev-run.sh  reset-state.sh
src/devpane/: __init__.py  __main__.py
src/devpane/cli/: toggle.py
src/devpane/daemon/: app.py  dbus.py  ipc.py  protocol.py  single_instance.py
src/devpane/platform/: adapter.py  detect.py  layer_shell_preload.py  wayland_layer.py  wayland_plain.py  x11.py
src/devpane/store/: index.py  notes.py  paths.py  sprints.py  subtasks.py
src/devpane/ui/: animations.py  autosave.py  controller.py  editor.py  gtk_app.py  header.py  keyboard_shortcuts.py  list_continuation.py  markdown_render.py  markdown_scan.py  prefs.py  slash_commands.py  sprint_bar.py  status_pill.py  styles.css  subtask_panel.py  task_list.py  (+1 more)
tests/: conftest.py  test_cli_toggle.py  test_daemon_e2e.py  test_debounce.py  test_index_fts.py  test_ipc.py  test_keyboard_shortcuts.py  test_list_continuation.py  test_logging.py  test_markdown_reveal.py  test_markdown_scan.py  test_notes_store.py  test_paths.py  test_platform_adapter.py  test_platform_detect.py  test_prefs.py  test_single_instance.py  test_skeleton.py  test_slash_commands.py  test_sprints.py  test_subtasks.py
(+4 files in other folders)
